Done the datatime format UI function (Moonshine-IDE/Moonshine-IDE#1017)

--- a/src/view/DominoViewMockVisualEditor.mxml
+++ b/src/view/DominoViewMockVisualEditor.mxml
@@ -633,6 +633,13 @@
 						colXML.appendChild(numberXML);
 					}else if(c.columnFormatStyle=="datetime"){
 						var datetimeXML:XML = new XML("<datetimeformat />");
+						if(c.columnDateDisplayFormatPreferences!=null && c.columnDateDisplayFormatPreferences!=""){
+							datetimeXML.@preference=c.columnNumberFormatUsecustomsym;
+						}else{
+							datetimeXML.@preference="usersetting"
+						}
+						
+						
 						
 					}
 				}
